---------------------------------------------------------------------------------------------------
Version: 17.0.16
Date: 2019-12-08
  Features:
  Changes:
  Bugfixes:
    - Fix the biters targeting message to handle spawn as target
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.15
Date: 2019-12-08
  Features:
    - Shared damage is proportional to the distance between the injured player and the other player vs the generated map size. So on big maps you need to be further away from them to recive half damage than a small map.
    - Biter hunting group message includes clickable GPS location of targeted player's position.
    - Biter Hunt Groups has command to write out results as JSON: biters_write_out_hunt_group_results
    - Shared damage has command to write out results as JSON: shared_damage_write_out_kills_deaths
  Changes:
    - Shared damage kill alerts include how many kills and deaths the 2 participants have had
    - Includes command to do a one off fix on bad old repeating scheduled events: december_2019_fix_scheduled_events
  Bugfixes:
    - fixed typo in snowball mod compatibility added in 17.0.13
    - Shared damage - damage <= 0 is ignored
    - Biter hunt groups will be given new attack orders should thye lose them.
    - Biter hunt group will not declare player vicotry before they are all dead now.
    - Correct further intermittent startup crash for some players with scheduled event functions shown in logs.
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.14
Date: 2019-12-05
  Features:
    - Shared damage - When a player dies to shared damage the "killer" player is named and shamed. Also logged to stats table (no viewer yet)
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.13
Date: 2019-12-03
  Features: